--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
         const videoPreview = document.getElementById('videoPreview');
         const downloadLink = document.getElementById('downloadLink');
 
-        const REEL_API_BASE = 'https://wamphire-reels.tubemusical7.workers.dev/?url=';
+        const REEL_API_BASE = 'https://hidden-resonance-c0ec.tubemusical7.workers.dev/?url=';
 
         reelForm.addEventListener('submit', async (e) => {
             e.preventDefault();
